MINOR: fix the data asset header spacing in Metric entity (#21268)
* fix the data asset header spacing in Metric entity

* fix the spacing between floating cards on homepage

--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/GithubStarCard/github-star-card.style.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/GithubStarCard/github-star-card.style.less
@@ -94,7 +94,7 @@
 
 @keyframes scrollInWithAlert {
   to {
-    bottom: 160px;
+    bottom: 170px;
   }
 }
 
